2009-01-17  Alper KANAT  <alperkanat@raptiye.org>

	* media/temp: readded the link to the git repository..
	* TODO: completed another task..
	* comments/admin.py, comments/models.py: fixed the bug that occurs when the
	users don't write http:// in front of the web site urls they provide..
	* templates/blog/comments.html: thanks to the precious visitors, added login
	and registration links to the comment box when the visitor is not logged
	in..

2009-01-15  Alper KANAT  <alperkanat@raptiye.org>

	* TODO, blog/admin.py: fixed a bug for posting to twitter..

2009-01-14  Alper KANAT  <alperkanat@raptiye.org>

	* media/images/flickr_logo.png, templates/blog/flickr.html,
	templates/blog/sidebar.html: added flickr flash widget to the sidebar..
	* TODO, blog/admin.py: added a bugfix todo.. trying to prevent new blog
	entries being posted to twitter until they're really published and also the
	older ones being published when they're updated.. (maybe this is an option,
	heh? :))
	* media/temp: deleted this link since it causes permission problems.. this
	link should be created during installation..
	* templates/users/login.html, users/views.py: fixed a bug in the login page
	when wrong credentials are given. also changed the way of posting error
	messages at login.. this behaviour must be extended to whole raptiye..

2009-01-07  Alper KANAT  <alperkanat@raptiye.org>

	* .gitignore: added gitignore file since i'm trying to move raptiye's code
	base to git.. :)
	* media/images/upload/.gitignore: added this empty file to keep track of the
	directory..

2009-01-06  Alper KANAT  <alperkanat@raptiye.org>

	* TODO: new todos..
	* blog/templatetags/blog_filters.py: a fix to stop numerous weird
	HTMLParseError exceptions during code colorization..

2009-01-05  Alper KANAT  <alperkanat@raptiye.org>

	* extra/initials.py, settings-example.py, users/backends.py, users/views.py:
	removed anonymous and openid users' dumb passwords since they were messing