@@ -11,7 +11,6 @@ TODO
 	* delete expired users with a cronjob
 	* there're lots of places to fix and delete in users/views.py
 	* move all form validation to forms.py for all forms..
-	* google adsense
 
 
 --- ADMIN Improvements ---
