@@ -117,15 +117,15 @@ blockquote {
 	float: left;
 	margin-bottom: 30px;
 	width: 335px;
-	height: 310px;
+	height: 465px;
 	background: transparent url("/media/images/post-it.png") top left no-repeat;
 	text-align: left;
 }
 
 #main_menu {
 	display: block;
-	margin-top: 60px;
-	margin-left: 10px;
+	margin: 60px 0 0 10px;
+	height: 180px;
 	text-indent: 35px;
 }
 
@@ -139,6 +139,11 @@ blockquote {
 	display: block;
 	margin-bottom: 15px;
 	background: transparent url("/media/images/check.png") top left no-repeat;
+}
+
+#mainpage_ads {
+	margin: 100px auto;
+	text-align: center;
 }
 
 #body_right {
@@ -288,7 +293,7 @@ blockquote {
 }
 
 .entry_guide {
-	margin-bottom: 40px;
+	margin-bottom: 50px;
 }
 
 .entry_guide .left {
