@@ -1,0 +1,12 @@
+<div style="margin: 0 0 20px 0; text-align: center;">
+	<script type="text/javascript">
+	<!--
+		google_ad_client = "pub-8285629271686068";
+		/* 468x60, oluşturulma 17.01.2009 */
+		google_ad_slot = "8159388789";
+		google_ad_width = 468;
+		google_ad_height = 60;
+	-->
+	</script>
+	<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js"></script>
+</div>
