@@ -62,6 +62,8 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 	{% endfor %}
 </div>
 
+{% include "blog/comments_upper_ad.html" %}
+
 {% if entry.comments_enabled %}
 <input id="disableForm" type="hidden" value="0" />
 
