@@ -1,0 +1,12 @@
+<div style="margin: 10px 0 10px 0; text-align: center;">
+	<script type="text/javascript">
+	<!--
+		google_ad_client = "pub-8285629271686068";
+		/* 336x280, oluşturulma 17.01.2009 */
+		google_ad_slot = "4873857184";
+		google_ad_width = 336;
+		google_ad_height = 280;
+	-->
+	</script>
+	<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js"></script>
+</div>
