@@ -121,6 +121,8 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 			</div>
 		</div>
 	</div>
+	
+	{% include "blog/sidebar_downwards_ad.html" %}
 </div>
 
 <div style="display: none;">
