@@ -1,0 +1,12 @@
+<div style="float: right; margin: 20px 23px 0 0; text-align: center;">
+	<script type="text/javascript">
+	<!--
+		google_ad_client = "pub-8285629271686068";
+		/* 160x600, oluşturulma 17.01.2009 */
+		google_ad_slot = "7487248266";
+		google_ad_width = 160;
+		google_ad_height = 600;
+	-->
+	</script>
+	<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js"></script>
+</div>
