@@ -38,6 +38,8 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 				{% endwith %}
 			</ul>
 		</div>
+		
+		{% include "frontpage/mainpage_ads.html" %}
 	</div>
 	<div id="body_right">
 		<div id="body_title">
