@@ -1,0 +1,12 @@
+<div id="mainpage_ads">
+	<script type="text/javascript">
+	<!--
+		google_ad_client = "pub-8285629271686068";
+		/* 234x60, oluşturulma 17.01.2009 */
+		google_ad_slot = "9633616838";
+		google_ad_width = 234;
+		google_ad_height = 60;
+	-->
+	</script>
+	<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js"></script>
+</div>
